--- a/Jewelry/Jewelry.csproj
+++ b/Jewelry/Jewelry.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
@@ -14,6 +14,7 @@
     <AssemblyVersion>2.0.0.0</AssemblyVersion>
     <FileVersion>2.0.0.0</FileVersion>
     <Description>.NET support</Description>
+    <PackageVersion>2.0.2</PackageVersion>
   </PropertyGroup>
   <ItemGroup>
     <None Include="..\README.md">
