Support .NET Standard 2.0

--- a/Jewelry.Test/Jewelry.Test.csproj
+++ b/Jewelry.Test/Jewelry.Test.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-
     <IsPackable>false</IsPackable>
 
     <AssemblyName>Jewelry.Test</AssemblyName>
+    <LangVersion>8</LangVersion>
+    <TargetFrameworks>net47;net472;net48;netcoreapp3.1</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
