Use System.Memory on netstandard2.0 only

--- a/Jewelry/Jewelry.csproj
+++ b/Jewelry/Jewelry.csproj
@@ -23,7 +23,7 @@
       <PackagePath></PackagePath>
     </None>
   </ItemGroup>
-  <ItemGroup>
+  <ItemGroup Condition = "'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="System.Memory" Version="4.5.3" />
   </ItemGroup>
 </Project>
