--- a/Jewelry.Test/Jewelry.Test.csproj
+++ b/Jewelry.Test/Jewelry.Test.csproj
@@ -4,14 +4,15 @@
     <IsPackable>false</IsPackable>
 
     <AssemblyName>Jewelry.Test</AssemblyName>
-    <LangVersion>8</LangVersion>
-    <TargetFrameworks>net47;net472;net48;netcoreapp3.1</TargetFrameworks>
+    <LangVersion>latest</LangVersion>
+    <TargetFrameworks>net472;net48;net6.0;netcoreapp3.1</TargetFrameworks>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
-    <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.1" />
+    <PackageReference Include="xunit" Version="2.4.2" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
