--- a/Jewelry/Jewelry.csproj
+++ b/Jewelry/Jewelry.csproj
@@ -3,7 +3,7 @@
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageLicenseFile>README.md</PackageLicenseFile>
-    <Copyright>Copyright (c) 2019-2020 copyright Yoshihiro Ito (yo.i.jewelry.bab@gmail.com)</Copyright>
+    <Copyright>Copyright (c) 2019-2022 copyright Yoshihiro Ito (yo.i.jewelry.bab@gmail.com)</Copyright>
     <Version>2.0.1</Version>
     <Authors>Yoshihiro Ito</Authors>
     <Company>Jewelry</Company>
@@ -13,9 +13,9 @@
     <AssemblyVersion>2.0.0.0</AssemblyVersion>
     <FileVersion>2.0.0.0</FileVersion>
     <Description>.NET support</Description>
-    <PackageVersion>2.0.6</PackageVersion>
-    <LangVersion>8</LangVersion>
-    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <PackageVersion>2.0.7</PackageVersion>
+    <LangVersion>latest</LangVersion>
+    <TargetFrameworks>net6.0;netstandard2.0;netstandard2.1</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <None Include="..\README.md">
@@ -24,6 +24,6 @@
     </None>
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="System.Memory" Version="4.5.3" />
+    <PackageReference Include="System.Memory" Version="4.5.5" />
   </ItemGroup>
 </Project>
