--- a/Jewelry.Test/Jewelry.Test.csproj
+++ b/Jewelry.Test/Jewelry.Test.csproj
@@ -5,7 +5,7 @@
 
     <AssemblyName>Jewelry.Test</AssemblyName>
     <LangVersion>latest</LangVersion>
-    <TargetFrameworks>net472;net48;net6.0;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net472;net48;net6.0;net7.0;netcoreapp3.1</TargetFrameworks>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
