--- a/Jewelry/Jewelry.csproj
+++ b/Jewelry/Jewelry.csproj
@@ -4,7 +4,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageLicenseFile>README.md</PackageLicenseFile>
     <Copyright>Copyright (c) 2019-2023 copyright Yoshihiro Ito (yo.i.jewelry.bab@gmail.com)</Copyright>
-    <Version>2.0.1</Version>
+    <Version>2.0.11</Version>
     <Authors>Yoshihiro Ito</Authors>
     <Company>Jewelry</Company>
     <PackageProjectUrl>https://github.com/YoshihiroIto/Jewelry</PackageProjectUrl>
@@ -13,9 +13,9 @@
     <AssemblyVersion>2.0.0.0</AssemblyVersion>
     <FileVersion>2.0.0.0</FileVersion>
     <Description>.NET support</Description>
-    <PackageVersion>2.0.10</PackageVersion>
+    <PackageVersion>2.0.11</PackageVersion>
     <LangVersion>latest</LangVersion>
-    <TargetFrameworks>net6.0;net7.0;netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>net6.0;net7.0;net8.0;netstandard2.0;netstandard2.1</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <None Include="..\README.md">
