--- a/Jewelry/Jewelry.csproj
+++ b/Jewelry/Jewelry.csproj
@@ -15,7 +15,7 @@
     <Description>.NET support</Description>
     <PackageVersion>2.0.11</PackageVersion>
     <LangVersion>latest</LangVersion>
-    <TargetFrameworks>net6.0;net7.0;net8.0;netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <None Include="..\README.md">
