--- a/Jewelry/Jewelry.csproj
+++ b/Jewelry/Jewelry.csproj
@@ -1,29 +1,31 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <Nullable>enable</Nullable>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageLicenseFile>README.md</PackageLicenseFile>
-    <Copyright>Copyright (c) 2019-2023 copyright Yoshihiro Ito (yo.i.jewelry.bab@gmail.com)</Copyright>
-    <Version>2.0.11</Version>
-    <Authors>Yoshihiro Ito</Authors>
-    <Company>Jewelry</Company>
-    <PackageProjectUrl>https://github.com/YoshihiroIto/Jewelry</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/YoshihiroIto/Jewelry</RepositoryUrl>
-    <PackageTags>collection string lru cache text</PackageTags>
-    <AssemblyVersion>2.0.0.0</AssemblyVersion>
-    <FileVersion>2.0.0.0</FileVersion>
-    <Description>.NET support</Description>
-    <PackageVersion>2.0.11</PackageVersion>
-    <LangVersion>latest</LangVersion>
-    <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
-  </PropertyGroup>
-  <ItemGroup>
-    <None Include="..\README.md">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="System.Memory" Version="4.5.5" />
-  </ItemGroup>
+    <PropertyGroup>
+        <Nullable>enable</Nullable>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageLicenseFile>README.md</PackageLicenseFile>
+        <Copyright>Copyright (c) 2019-2023 copyright Yoshihiro Ito (yo.i.jewelry.bab@gmail.com)</Copyright>
+        <Version>2.0.12</Version>
+        <Authors>Yoshihiro Ito</Authors>
+        <Company>Jewelry</Company>
+        <PackageProjectUrl>https://github.com/YoshihiroIto/Jewelry</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/YoshihiroIto/Jewelry</RepositoryUrl>
+        <PackageTags>collection string lru cache text</PackageTags>
+        <AssemblyVersion>2.0.0.0</AssemblyVersion>
+        <FileVersion>2.0.0.0</FileVersion>
+        <Description>.NET support</Description>
+        <PackageVersion>2.0.12</PackageVersion>
+        <LangVersion>latest</LangVersion>
+        <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
+    </PropertyGroup>
+    
+    <ItemGroup>
+        <None Include="..\README.md">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+    </ItemGroup>
+    
+    <ItemGroup>
+        <InternalsVisibleTo Include="Jewelry.Test"/>
+    </ItemGroup>
 </Project>
