--- a/Jewelry/Jewelry.csproj
+++ b/Jewelry/Jewelry.csproj
@@ -3,17 +3,17 @@
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageLicenseFile>README.md</PackageLicenseFile>
-        <Copyright>Copyright (c) 2019-2023 copyright Yoshihiro Ito (yo.i.jewelry.bab@gmail.com)</Copyright>
-        <Version>2.0.27</Version>
+        <Copyright>Copyright (c) 2019-2024 copyright Yoshihiro Ito (yo.i.jewelry.bab@gmail.com)</Copyright>
+        <Version>2.0.28</Version>
         <Authors>Yoshihiro Ito</Authors>
         <Company>Jewelry</Company>
         <PackageProjectUrl>https://github.com/YoshihiroIto/Jewelry</PackageProjectUrl>
         <RepositoryUrl>https://github.com/YoshihiroIto/Jewelry</RepositoryUrl>
-        <PackageTags>collection string lru cache text</PackageTags>
+        <PackageTags>collection string text memory</PackageTags>
         <AssemblyVersion>2.0.0.0</AssemblyVersion>
         <FileVersion>2.0.0.0</FileVersion>
         <Description>.NET support</Description>
-        <PackageVersion>2.0.27</PackageVersion>
+        <PackageVersion>2.0.28</PackageVersion>
         <LangVersion>latest</LangVersion>
         <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
     </PropertyGroup>
