--- a/Jewelry.Test/Jewelry.Test.csproj
+++ b/Jewelry.Test/Jewelry.Test.csproj
@@ -5,7 +5,7 @@
 
     <AssemblyName>Jewelry.Test</AssemblyName>
     <LangVersion>latest</LangVersion>
-    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+    <TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
