--- a/Jewelry/Jewelry.csproj
+++ b/Jewelry/Jewelry.csproj
@@ -13,9 +13,9 @@
         <AssemblyVersion>2.0.0.0</AssemblyVersion>
         <FileVersion>2.0.0.0</FileVersion>
         <Description>.NET support</Description>
-        <PackageVersion>2.0.36</PackageVersion>
+        <PackageVersion>2.0.37</PackageVersion>
         <LangVersion>latest</LangVersion>
-        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+        <TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
     </PropertyGroup>
     
     <ItemGroup>
